# Tiralabra-2022-Data-Compression

./: .coveragerc  README.md  pyproject.toml
documentation/: 1-weeklyReport.md  2-weeklyReport.md  3-weeklyReport.md  4-weeklyReport.md  5-weeklyReport.md  6-weeklyReport.md  requirements.md
src/: dummy.py  test.py  test.txt  test.xip  xip.py
src/entities/: node.py
src/logic/: compress_data.py  compressor.py  decompressor.py  file_handler.py  huffman.py  lempel_ziv.py  utility.py
src/tests/: compression_test.py  compressor_test.py
