[tool.poetry]
name = "tiralab-2022-data-compression"
version = "0.0.1"
description = "Application for data compression"
authors = ["Hamid Aebadi <hamidebadi1996@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
coverage = "^6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
